[metadata]
name = dgnutils
author = Declan Nishiyama
author-email = dnishiyama@gmail.com
summary = frequently used python functions
description-file = README.txt
home-page = https://github.com/dnishiyama
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    dgnutils

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
